--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bidding application",
+  "name": "bidding-application",
   "author": "Ashutosh Mishra",
   "version": "0.1.0",
   "private": true,
